--- a/src/app/layout/layout.module.css
+++ b/src/app/layout/layout.module.css
@@ -1,3 +1,17 @@
-.wrapper{
+.wrapper {
   padding: 2rem;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    padding: 2rem 6rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .wrapper {
+    padding: 2rem 8rem;
+    max-width: 1024px;
+    margin: 0 auto
+  }
 }
