--- a/src/components/molecules/PostCard/postcard.module.css
+++ b/src/components/molecules/PostCard/postcard.module.css
@@ -1,16 +1,16 @@
-.postCard{
+.postCard {
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
-  margin-bottom: 4rem;
 }
 
-.postCard time{
+.postCard time {
   font-size: 1rem;
   font-weight: 100;
+  margin-bottom: 1%;
+  width: 100%;
 }
 
-.title{
+.title {
   font-size: 1rem;
   text-transform: uppercase;
   font-family: "Josefin Sans";
@@ -18,9 +18,17 @@
   font-weight: 400;
 }
 
-.description{
+.description {
   font-size: 1rem;
   font-weight: 100;
-  line-height: calc(1em + 0.375rem);
-  margin-top: 2.4rem;
+  line-height: 1.4;
+  margin: 2rem 0 4rem 0;
+}
+
+@media (min-width: 1024px) {
+  .postCard {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 }
